--- a/index.html
+++ b/index.html
@@ -55,14 +55,22 @@
                       </h4>
                     </div>
                     <div class="col-6 mb-3">
-                      <h3>Qualifications </h3>
+                      <h3>資格 </h3>
                       <h4 style="color: black;">
-                        <p>日本語能力試験JLPT-N3  2016年12月</p>
-                        <p>日本語試験NAT TEST 2級  2019年04月</p>
-                        <p>日本語能力試験JLPT-N2  2019年12月</p>
-                        <p> OCJP Bronze 2020年05月</p>
-                        <p>日本語試験力評価試験 2020年05月</p>
-                        <p>日本語能力試験JLPT-N1 2022年07月</p>                                     
+                        <p>・日本語能力試験JLPT-N3  2016年12月</p>
+                        <p>・日本語試験NAT TEST 2級  2019年04月</p>
+                        <p>・日本語能力試験JLPT-N2  2019年12月</p>
+                        <p> ・OCJP Bronze 2020年05月</p>
+                        <p>・日本語試験力評価試験 2020年05月</p>
+                        <p>・日本語能力試験JLPT-N1 2022年07月</p>                                     
+                      </h4>
+                    </div>
+                      <div class="col-6 mb-3">
+                      <h3>言語レベル </h3>
+                      <h4 style="color: black;">
+                        <p>・日本語→ビジネスレベル</p>
+                        <p>・日本語→母国語</p>
+                        <p>・英語→日常会話</p>                            
                       </h4>
                     </div>
                   </div>
