--- a/userProfile.html
+++ b/userProfile.html
@@ -78,7 +78,7 @@
    if (lang == "en") {
   location.reload(true);
   } else if (lang == "ja") {
-    const url = 'index.html'
+    const url = 'userProfileJapan.html'
     window.open(url, '_blank')
   }
 }
