--- a/userProfileJapan.html
+++ b/userProfileJapan.html
@@ -44,7 +44,7 @@
                      <p class="text-muted"><a href="https://barani123456.github.io/snow/" title="snow">ハローキティのインスピレーション</a></p>
                   </div>
                   <div class="col-6 mb-3">
-                    <h3>SKILLS</h3>
+                    <h3>スキル</h3>
                     <h4 style="color: #eb8334;">
                      <p class="text-muted">言語:Java、HTML、CSS、JavaScript、Jquery </p>
                        <p class="text-muted">フレームワーク:Java Spring、Structs、Bootstrap3、4</p>
