--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Profile Image hover effect</title>
-	<link rel="stylesheet" href="./css/baraniProfile.css">
+	<link rel="stylesheet" href="./css/baraniProfile.css" />
 
 	<!-- ------------ Font awesome CDN link ------------------ -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
