--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Profile Image hover effect</title>
 	<!-- ------------ Font awesome CDN link ------------------ -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.css">  
-	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css">  
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">  
 	<link rel="stylesheet" href="./css/baraniProfile.css" />
 </head>
 <body>
