--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Profile </title>
-	<link rel="stylesheet" href="./css/baraniProfile.css" />
+	<link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
 	<aside class="profile-card">
