--- a/userProfile.html
+++ b/userProfile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/style1.css" />
 </head>
 <body>
   <section class="vh-100" style="background-color: #f4f5f7;">
