--- a/userProfile.html
+++ b/userProfile.html
@@ -34,7 +34,7 @@
               style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
               <div id="profile">
                 <a href="./photo/barani.jpg" target="_blank" title="Barani MaungMaung">
-                  <img src="./photo/barani.jpg"
+                  <img src="https://barani123456.github.io/baraniProfile/"
                   alt="Avatar" class="img-fluid my-5" style="width: 200px;" />
                 </a>
                 <div id="sample1">
@@ -60,8 +60,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body p-4">
-
-                <hr class="mt-0 mb-4">
+               <hr class="mt-0 mb-4">
                 <div class="row pt-1">
                  <div class="col-6 mb-3">
                   <h3 class="langCng" lang="ja">プロジェクト</h3>
