--- a/userProfile.html
+++ b/userProfile.html
@@ -34,7 +34,7 @@
               style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
               <div id="profile">
                 <a href="./photo/barani.jpg" target="_blank" title="Barani MaungMaung">
-                  <img src="https://barani123456.github.io/baraniProfile/"
+                  <img src="./photo/barani.jpg"
                   alt="Avatar" class="img-fluid my-5" style="width: 200px;" />
                 </a>
                 <div id="sample1">
