--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		I came to Japan in 2017 and have worked at various software development sites for a long time.
 		Each time, we have worked on new technologies and put effort into improving the quality of our products.
 		I have also been participated in a series of operations from listening to customer requests, basic design, and development to delivery.
-		I would like to review the code from many resources and hone my skills to be able to create more highly functional and responsive programming.
+		I would like to review the code from many resources and my skills to be able to create more highly functional and responsive programming.
 		In the future, I would like to aim for PL/PM in a larger field.
 	</p>
 	</div>
