--- a/userProfile.html
+++ b/userProfile.html
@@ -79,7 +79,8 @@
                   <p class="langCng" lang="en"><a href="https://barani123456.github.io/snow/" title="snow">HELLO KITTY INSPIRE</a></p>
                 </div>
                 <div class="col-6 mb-3">
-                  <h3>SKILLS</h3>
+                    <h3 class="langCng" lang="ja">スキル </h3>
+                    <h3 class="langCng" lang="en">SKILLS </h3>
                   <h4 style="color: #eb8334;">
                     <p class="langCng" lang="ja">言語:Java、HTML、CSS、JavaScript、Jquery </p>
                     <p class="langCng" lang="ja">フレームワーク:Java Spring、Structs、Bootstrap3、4</p>
@@ -96,7 +97,8 @@
                       </h4>
                     </div>
                     <div class="col-6 mb-3">
-                      <h3>Qualifications </h3>
+                      <h3 class="langCng" lang="ja">資格 </h3>
+                      <h3 class="langCng" lang="en">Qualifications </h3>
                       <h4 style="color: black;">
                        <p class="langCng" lang="ja">・日本語能力試験JLPT-N3  2016年12月</p>
                        <p class="langCng" lang="ja">・日本語試験NAT TEST 2級  2019年04月</p>
