--- a/userProfile.html
+++ b/userProfile.html
@@ -33,7 +33,7 @@
               <div class="col-md-4 gradient-custom text-center text-white"
               style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
               <div id="profile">
-                <a href="./photo/barani.jpg" target="_blank" title="Barani MaungMaung">
+                <a href="https://barani123456.github.io/baraniProfile/" target="_blank" title="Barani MaungMaung">
                   <img src="./photo/barani.jpg"
                   alt="Avatar" class="img-fluid my-5" style="width: 200px;" />
                 </a>
@@ -103,7 +103,7 @@
                        <p class="langCng" lang="ja">・日本語能力試験JLPT-N3  2016年12月</p>
                        <p class="langCng" lang="ja">・日本語試験NAT TEST 2級  2019年04月</p>
                        <p class="langCng" lang="ja">・日本語能力試験JLPT-N2  2019年12月</p>
-                       <p class="langCng" lang="ja"> ・OCJP Bronze 2020年05月</p>
+                       <p class="langCng" lang="ja"> ・OCJPブロンズ 2020年05月</p>
                        <p class="langCng" lang="ja">・日本語試験力評価試験 2020年05月</p>
                        <p class="langCng" lang="ja">・日本語能力試験JLPT-N1 2022年07月</p>
                        <p class="langCng" lang="en">Japanese Language Proficiency Test JLPT-N3 2016/12</p> 
