--- a/userProfile.html
+++ b/userProfile.html
@@ -67,16 +67,19 @@
                   <h4 class="langCng" lang="ja">ウェブデザイン</h4>
                   <h3 class="langCng" lang="en">PROJECTS</h3>
                   <h4 class="langCng" lang="en">Web Design</h4>
+                  <p class="langCng" lang="ja"><a href="https://barani123456.github.io/baraniProfile/" title="userProfile">プロフィール </a></p>
                   <p class="langCng" lang="ja"><a href="https://barani123456.github.io/yoga/" title="yoga">ヨガウェブサイト</a></p>
                   <p class="langCng" lang="ja"><a href="https://barani123456.github.io/OnlineShopping/" title="onlineshopping">オンライン ショッピング ウェブサイト</a></p>
                   <p class="langCng" lang="ja"><a href="https://barani123456.github.io/furniture/" title="furniture">ホーム家具ウェブサイト</a></p>
                   <p class="langCng" lang="ja"><a href="https://barani123456.github.io/Travel/" title="Travel">旅行ウェブサイト</a></p>
                   <p class="langCng" lang="ja"><a href="https://barani123456.github.io/snow/" title="snow">ハローキティのインスピレーション</a></p>
+                  <p class="langCng" lang="en"><a href="https://barani123456.github.io/baraniProfile/" title="userProfile">BARANI PROFILE</a></p>
                   <p class="langCng" lang="en"><a href="https://barani123456.github.io/yoga/" title="yoga">YOGA WEBSITE</a></p>
                   <p class="langCng" lang="en"><a href="https://barani123456.github.io/OnlineShopping/" title="onlineshopping">ONLINE SHOPPING WEBSITE</a></p>
                   <p class="langCng" lang="en"><a href="https://barani123456.github.io/furniture/" title="furniture">HOME FURNITURE WEBSITE</a></p>
                   <p class="langCng" lang="en"><a href="https://barani123456.github.io/Travel/" title="Travel">AROUND THE WORLD</a></p>
                   <p class="langCng" lang="en"><a href="https://barani123456.github.io/snow/" title="snow">HELLO KITTY INSPIRE</a></p>
+                  
                 </div>
                 <div class="col-6 mb-3">
                     <h3 class="langCng" lang="ja">スキル </h3>
