--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		また、お客様の要望をヒアリングして基本設計、開発から納品までの一連の業務にも携わってきました。 
 		様々な角度からコードを見直し、より高機能でレスポンスのよいプログラミングが出来るよう技術を磨きたいと考えております。 
 		今後はより大規模なフィールドでPL・PMを目指したいと考えております。 
+		<input type="button" onclick="location.href='https://barani123456.github.io/baraniProfile/userProfile.html'" value="続きを読む">
 	</p>
 	<p class="langCng" lang="en" align="justify">
 		After graduating from computer university, I worked for two years as an open web development programmer at NTT Data Myanmar.
@@ -51,6 +52,8 @@
 		I have also been participated in a series of operations from listening to customer requests, basic design, and development to delivery.
 		I would like to review the code from many resources and my skills to be able to create more highly functional and responsive programming.
 		In the future, I would like to aim for PL/PM in a larger field.
+		<input type="button" onclick="location.href='https://barani123456.github.io/baraniProfile/userProfile.html'" value="Read More">
+
 	</p>
 	</div>
 </div>
