--- a/userProfile.html
+++ b/userProfile.html
@@ -106,15 +106,15 @@
                        <p class="langCng" lang="ja">・日本語能力試験JLPT-N3  2016年12月</p>
                        <p class="langCng" lang="ja">・日本語試験NAT TEST 2級  2019年04月</p>
                        <p class="langCng" lang="ja">・日本語能力試験JLPT-N2  2019年12月</p>
-                       <p class="langCng" lang="ja"> ・OCJPブロンズ 2020年05月</p>
+                       <p class="langCng" lang="ja">・OCJPブロンズ 2020年05月</p>
                        <p class="langCng" lang="ja">・日本語試験力評価試験 2020年05月</p>
                        <p class="langCng" lang="ja">・日本語能力試験JLPT-N1 2022年07月</p>
-                       <p class="langCng" lang="en">Japanese Language Proficiency Test JLPT-N3 2016/12</p> 
-                       <p class="langCng" lang="en">Japanese language test NAT TEST Level 2  2019/04</p>
-                       <p class="langCng" lang="en">Japanese Language Proficiency Test JLPT-N2 2019/12</p>
-                       <p class="langCng" lang="en"> OCJP Bronze 2020/05</p>
-                       <p class="langCng" lang="en">Japanese Language Proficiency Evaluation Test  2020/07</p>
-                       <p class="langCng" lang="en"> Japanese Language Proficiency Test JLPT-N1  2022/07</p>                                    
+                       <p class="langCng" lang="en">・Japanese Language Proficiency Test JLPT-N3 2016/12</p> 
+                       <p class="langCng" lang="en">・Japanese language test NAT TEST Level 2  2019/04</p>
+                       <p class="langCng" lang="en">・Japanese Language Proficiency Test JLPT-N2 2019/12</p>
+                       <p class="langCng" lang="en">・ OCJP Bronze 2020/05</p>
+                       <p class="langCng" lang="en">・Japanese Language Proficiency Evaluation Test  2020/07</p>
+                       <p class="langCng" lang="en">・Japanese Language Proficiency Test JLPT-N1  2022/07</p>                                    
                      </h4>
                    </div>
                  </div>
