--- a/userProfile.html
+++ b/userProfile.html
@@ -25,8 +25,8 @@
 </head>
 <body>
   <section class="vh-100" style="background-color: #f4f5f7;">
-    <div class="langCng" lang="ja" id="timejapan" align="right"></div>
-   <div class="langCng" lang="en" id="timeenglish" align="right"></div>
+   <div class="langCng" lang="ja" id="timejapan" align="right" style="font-size: 1.1rem"></div>
+   <div class="langCng" lang="en" id="timeenglish" align="right" style="font-size: 1.4rem"> </div>
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col col-lg-6 mb-4 mb-lg-0">
