--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </header>
 <div class="profile-bio">
 	<h3 class="langCng" lang="ja">自己PR</h3>
-	<h3 class="langCng" lang="en">INTRODUCTION</h3>
+	<h3 class="langCng" lang="en">COVER LETTER<h3>
 	<p class="langCng" lang="ja" align="justify">
 		コンピューター大学卒業後にNTTデータミャンマーでオープン・WEB系の開発プログラマーとして2年間勤務しておりました。 
 		2017年に来日し、様々なソフトウェア開発現場に長期に渡り勤務してきました。 
