--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
 	</p>
 		
 	<p class="langCng" lang="en" align="justify">
-		After graduating from computer university, I worked for two years as an open web development programmer at NTT Data Myanmar.
-		I came to Japan in 2017 and working in a series of operations from listening to customer requests, basic design, and development to delivery.
-		I would like to review the code from many resources and my skills to be able to create more highly functional and responsive programming.
+		After graduating from computer university, I worked for two years as 
+		an open web development programmer at NTT Data Myanmar.
+		I came to Japan in 2017 and working in a series of operations from 
+		listening to customer requests, basic design, and development to delivery.
+		I would like to review the code from many resources and my skills 
+		to be able to create more highly functional and responsive programming.
 		In the future, I would like to aim for PL/PM in a larger field.
 		<input type="button" onclick="location.href='https://barani123456.github.io/baraniProfile/userProfile.html'" value="Read More">
 	<br><br><br><br>
