--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		listening to customer requests, basic design, and development to delivery.
 		I would like to review the code from many resources and my skills 
 		to be able to create more highly functional and responsive programming.
-		In the future, I would like to aim for PL/PM in a larger field.
+		In the future, I would like to aim for PL/PM in a large project field.
 		<input type="button" onclick="location.href='https://barani123456.github.io/baraniProfile/userProfile.html'" value="Read More">
 	<br><br><br><br>
 		
