--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<aside class="profile-card">
 		<header>
 			<a target="_blank" href="https://barani123456.github.io/baraniProfile/userProfile.html" title="READ MORE profile-bio">
-				<img src="./photo/barani.jpg" class="hoverZoomLink">
+				<img src="./photo/barani1.jpg" class="hoverZoomLink">
 			</a>
 			<div id="sample1">
 				<input type="radio" name="langKbn" id="sJa" onClick="langSet('ja')" checked>
