--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 	</p>
 		
 	<p class="langCng" lang="en" align="justify">
-		After graduating from computer university, I worked for two years as 
-		an open web development programmer at NTT Data Myanmar.
+		After graduating from computer university, I worked for two years as an open web development programmer at NTT Data Myanmar.
 		I came to Japan in 2017 and working in a series of operations from 
 		listening to customer requests, basic design, and development to delivery.
 		I would like to review the code from many resources and my skills 
