--- a/userProfile.html
+++ b/userProfile.html
@@ -77,7 +77,7 @@
                   <p class="langCng" lang="ja"><a href="https://barani123456.github.io/furniture/" title="furniture">ホーム家具ウェブサイト</a></p>
                   <p class="langCng" lang="ja"><a href="https://barani123456.github.io/snow/" title="snow">ハローキティのインスピレーション</a></p>
                   <p class="langCng" lang="en"><a href="https://barani123456.github.io/baraniProfile/" title="userProfile">BARANI PROFILE</a></p>
-                  <p class="langCng" lang="en"><a href="https://barani123456.github.io/food/" title="Food">Resturant</a></p>
+                  <p class="langCng" lang="en"><a href="https://barani123456.github.io/food/" title="Food">RESTURANT</a></p>
                   <p class="langCng" lang="en"><a href="https://barani123456.github.io/Travel/" title="Travel">AROUND THE WORLD</a></p>
                   <p class="langCng" lang="en"><a href="https://barani123456.github.io/yoga/" title="yoga">YOGA WEBSITE</a></p>
                   <p class="langCng" lang="en"><a href="https://barani123456.github.io/OnlineShopping/" title="onlineshopping">ONLINE SHOPPING WEBSITE</a></p>
