--- a/userProfile.html
+++ b/userProfile.html
@@ -34,11 +34,16 @@
             <div class="row g-0">
               <div class="col-md-4 gradient-custom text-center text-white"
               style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
-              <div id="profile">
+             <div id="profile">
+                   <div class="langCng" lang="ja" align=right id="downloadButton"> <button type="submit" style="width:80px; height:40px;transition-duration: 0.4s; cursor: pointer" onclick="window.open('file/履歴書_バラニマウンマウン.docx')">履歴書</button>
+                    <button type="submit" size="30" style="transition-duration: 0.4s; cursor: pointer; width:100px; height:40px" onclick="window.open('file/職務経歴書_バラ二マウンマウン.xlsx')">職務経歴書</button></div> 
+                     <div class="langCng" lang="en" align=right id="downloadButton"> <button type="submit" style="width:80px; height:40px;transition-duration:0.4s; cursor: pointer" onclick="window.open('file/履歴書_バラニマウンマウン.docx')">Resume</button>
+                    <button type="submit" size="30" style="transition-duration: 0.4s; cursor: pointer; width:115px; height:40px" onclick="window.open('file/職務経歴書_バラ二マウンマウン.xlsx')">Curriculum Vitae</button></div> 
                 <a href="https://barani123456.github.io/baraniProfile/" target="_blank" title="Barani MaungMaung">
                   <img src="./photo/barani.jpg"
                   alt="Avatar" class="img-fluid my-5" style="width: 200px;" />
                 </a>
+
                 <div id="sample1">
                   <input type="radio" name="langKbn" id="sJa" onClick="langSet('ja')" checked>
                   <label for="sJa">
@@ -165,6 +170,11 @@
   }
 </script>
   <script type="text/javascript">
+        document.getElementById('downloadButton').addEventListener('click', function() {
+  // ダウンロード処理
+  setTimeout(function() {
+  }, 3000); // 3秒後にダウンロード完了と仮定
+});
         timerID = setInterval('clock()',500);
         function clock() {
           document.getElementById("timejapan").innerHTML = getNow();
