--- a/userProfile.html
+++ b/userProfile.html
@@ -35,9 +35,9 @@
               <div class="col-md-4 gradient-custom text-center text-white"
               style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
              <div id="profile">
-                   <div class="langCng" lang="ja" align=right id="downloadButton"> <button type="submit" style="width:80px; height:40px;transition-duration: 0.4s; cursor: pointer" onclick="window.open('file/履歴書_バラニマウンマウン.docx')">履歴書</button>
+                   <div class="langCng" lang="ja" align=right id="downloadButton"> <button type="submit" style="width:80px; height:40px;transition-duration: 0.4s; cursor: pointer" onclick="window.open('file/履歴書_バラニマウンマウン.xlsx')">履歴書</button>
                     <button type="submit" size="30" style="transition-duration: 0.4s; cursor: pointer; width:100px; height:40px" onclick="window.open('file/職務経歴書_バラ二マウンマウン.xlsx')">職務経歴書</button></div> 
-                     <div class="langCng" lang="en" align=right id="downloadButton"> <button type="submit" style="width:80px; height:40px;transition-duration:0.4s; cursor: pointer" onclick="window.open('file/履歴書_バラニマウンマウン.docx')">Resume</button>
+                     <div class="langCng" lang="en" align=right id="downloadButton"> <button type="submit" style="width:80px; height:40px;transition-duration:0.4s; cursor: pointer" onclick="window.open('file/履歴書_バラニマウンマウン.xlsx')">Resume</button>
                     <button type="submit" size="30" style="transition-duration: 0.4s; cursor: pointer; width:115px; height:40px" onclick="window.open('file/職務経歴書_バラ二マウンマウン.xlsx')">Curriculum Vitae</button></div> 
                 <a href="https://barani123456.github.io/baraniProfile/" target="_blank" title="Barani MaungMaung">
                   <img src="./photo/barani.jpg"
